fixed HEAD tests for 3.6